--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
-		"@openzeppelin/contracts": "^5.0.1"
+		"@openzeppelin/contracts": "^5.0.1",
+		"forge-std": "^1.1.2"
 	}
 }
