--- a/foundry.toml
+++ b/foundry.toml
@@ -5,6 +5,6 @@ libs = ["lib"]
 solc = "0.8.24"
 fmt.tab_width = 2
 
-remappings = ["@opensezppling/=node_modules/openzeppelin-contracts/"]
+remappings = ["@openzeppelin/contracts=node_modules/@openzeppelin/contracts/"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
